Fix test broken by previous commit